k8s/04_backend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: backend-api
  template:
    metadata:
      labels:
        component: backend-api
    spec:
      containers:
        - name: backend-api
          image: docker.io/21321321421441/interview-example-project-backend:latest
          ports:
            - containerPort: 4667
