k8s/backend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: backend-api
  template:
    metadata:
      labels:
        component: backend-api
    spec:
      containers:
        - name: backend-api
          image: 21321321421441/interview-example-project:0.0.9-RELEASE
          ports:
            - containerPort: 4667
