k8s/03_postgres_cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
  namespace: interview-example-project
spec:
  type: ClusterIP
  selector:
    component: postgres
  ports:
    - port: 5433
      targetPort: 5432
