k8s/05_backend_ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-ip-service
  namespace: interview-example-project
spec:
  type: ClusterIP
  selector:
    component: backend-api
  ports:
    - name: http
      port: 80
      targetPort: 4667
    - name: https
      port: 443
      targetPort: 4667
