k8s/08_frontend_ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-ip-service
spec:
  type: ClusterIP
  selector:
    component: frontend-react
  ports:
    - port: 80
      targetPort: 80
