k8s/08.2_ingress-service-production.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: interview-example-ingress-service
  namespace: interview-example-project
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - gke-test.ruecker.dev
      secretName: interview-example-tls
  rules:
    - host: gke-test.ruecker.dev
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-ip-service
                port:
                  number: 4667
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-ip-service
                port:
                  number: 80
